Manque les liens Mlag entre deux paires

--- a/views/lldpMapDynamic.twig
+++ b/views/lldpMapDynamic.twig
@@ -3,7 +3,7 @@
 
 {% block information %}
 <div class="spines">
-  <form action="lldpMapPost" method="post">
+  <form action="lldpMapDynamicPost" method="post">
     <label for="mySpines">Enter spine: </label>
     <input type="text" name="spines" id="mySpines" placeholder="spine1,spine2" required>
     <button>send</button>
